--- a/requirements_microservice.txt
+++ b/requirements_microservice.txt
@@ -1,4 +1,4 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-playwright==1.40.0
-pydantic==2.5.0
+fastapi>=0.68.0
+uvicorn[standard]>=0.15.0
+playwright>=1.20.0
+pydantic>=1.8.0,<2.0.0
