--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+playwright==1.40.0
 jinja2==3.1.2
 python-multipart==0.0.6
-aiofiles==23.2.0
-aiohttp==3.9.1
-requests==2.31.0
+aiofiles==23.2.1
+psutil==5.9.6
