🎬 Add N8N integration for 5MovieRulz.villas scraping
✨ Features:
- N8N workflow for scraping 5movierulz.villas
- Real-time result appending with animations
- Anti-bot measures with enhanced headers
- Caching system for scraped results
- Loading indicators and smooth UI transitions
- Render.com deployment ready

🔧 Technical:
- FastAPI lifespan events (no deprecation warnings)
- Playwright browser automation
- Duplicate detection and filtering
- Error handling and fallback mechanisms
- Memory-optimized for Render free tier

📁 Files:
- n8n_5movierulz_villas_workflow_fixed.json (import to n8n)
- Enhanced frontend with polling and animations
- Updated backend with n8n integration endpoints
- Render deployment configuration

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: movie-search-app
+    name: movie-search-n8n-app
     env: python
     buildCommand: pip install -r requirements.txt && playwright install chromium
     startCommand: python main.py
@@ -10,5 +10,5 @@ services:
         value: 8000
       - key: PYTHONUNBUFFERED
         value: 1
-      - key: NODE_OPTIONS
-        value: --max-old-space-size=256
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /opt/render/.cache/ms-playwright
