--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: movie-search-n8n-app
     env: python
-    buildCommand: pip install -r requirements.txt && playwright install chromium
+    runtime: python-3.11.6
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt && playwright install chromium
     startCommand: python main.py
     plan: free
     envVars:
@@ -12,3 +13,5 @@ services:
         value: 1
       - key: PLAYWRIGHT_BROWSERS_PATH
         value: /opt/render/.cache/ms-playwright
+      - key: PYTHON_VERSION
+        value: 3.11.6
