--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-playwright==1.40.0
-jinja2==3.1.2
-python-multipart==0.0.6
-aiofiles==23.2.1
-psutil==5.9.6
-httpx==0.28.1
+fastapi>=0.100.0,<0.105.0
+uvicorn>=0.20.0,<0.25.0
+playwright>=1.35.0,<1.41.0
+jinja2>=3.1.0,<3.2.0
+python-multipart>=0.0.5,<0.1.0
+aiofiles>=23.0.0,<24.0.0
+psutil>=5.9.0,<6.0.0
+httpx>=0.24.0,<0.26.0
