🔧 Fix missing templates/index.html for Render deployment
- Update .gitignore to include templates directory
- Ensure index.html template is included in deployment
- Fix TemplateNotFound error on Render

--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,7 @@ playwright-report/
 playwright/.cache/
 
 # Movie search specific
-*.html
 page_content.html
+# Keep templates directory
+!templates/
+!templates/*.html
